--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Algún lugar</h1>
+    <p>Cada vez que escribo una línea de código me doy cuenta de lo poco que sé, cada día aprendo algo nuevo, pero veo que no es suficiente.d</p>
     <script src="Script/script.js"></script>
 </body>
 </html>
