Saludo git agregado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Algún lugar</h1>
-    <p>Cada vez que escribo una línea de código me doy cuenta de lo poco que sé, cada día aprendo algo nuevo, pero veo que no es suficiente.d</p>
+    <p>Cada vez que escribo una línea de código me doy cuenta de lo poco que sé, cada día aprendo algo nuevo, pero veo que no es suficiente.</p>
     <script src="Script/script.js"></script>
 </body>
 </html>
